# smart-radar

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  OPTIMIZATIONS_APPLIED.md  README.md  cleanup_non_english_posts.py  collect_facebook_posts.py  collect_news_standalone.py  continue_processing.py  deploy.sh  docker-compose.yml  fast_process_raw_data.py  fetch_facebook_data.py  openai_fast_processor.py  process_raw_data.py  setup.sh  setup_nginx.sh  start_simple.sh  start_workers.sh  start_workers_ubuntu.sh
backend/: .env.example  Dockerfile  LLM_PROCESSING_FLOW.md  PLATFORM_STATUS.md  auto_process_backlog.py  check_cluster_platforms.py  check_collections.py  check_competitor_data.py  check_db.py  check_indexes.py  check_latest_data.py  check_platform_data.py  check_platforms.py  check_raw_data.py  check_sentiment_analysis.py  cleanup_languages.py  cleanup_non_allowed_languages.py  clear_old_data.py  collect_all_clusters.py  collect_competitors.py  collect_news_rss.py  create_print_daily_data.py  create_print_magazine_data.py  create_print_magazine_simple.py  create_sample_news.py  create_tamil_print_magazine.py  debug_data_structure.py  drop_text_index.py  fetch_data.py  fetch_news.py  fetch_working_platforms.py  fix_cluster_types.py  inspect_raw_data.py  main.py  monitor_llm_progress.py  process_all.py  process_articles.py  process_backlog.py  process_one.py  pyproject.toml  (+17 more)
backend/.claude/: settings.local.json
backend/scripts/: create_demo_data.py  delete_all_data.py  simple_demo_data.py  verify_data.py
omnipush-backend/: .env.example  CLAUDE.md  Dockerfile  README.md  TEST_SQS_README.md  app.py  apply_migration.py  pyproject.toml  requirements.txt  run.py  social_test.py  start_newsit_consumer.sh  start_slack_consumer.sh  test_ai_prompts.py  test_external_news_integration.py  test_facebook_api.py  test_language_detection.py  test_sqs_message.py  test_sqs_mock_trigger.py  test_twitter_api.py  verify_llm_logging_schema.sql
omnipush-backend/background/: scraper_runner.py
omnipush-backend/cache/: facebook_tokens_cache.json
omnipush-backend/config/: prompts.py  social_handles.json  tone_characteristics.py
omnipush-backend/constants/: district_channel_mapping.py  facebook_exclusions.py
omnipush-backend/core/: config.py  database.py  logging_config.py  middleware.py  security.py
omnipush-backend/docs/: AI_PROMPT_TESTING.md  CONTENT_TONES_GUIDE.md  CONTENT_TONES_QUICK_REFERENCE.md  GOOGLE_CUSTOM_SEARCH_SETUP.md  RLS_FIX_README.md  SIZE_COLUMN_FIX.md  api-examples.md  api-specification.md  background-publishing-implementation.md  database-schema.md  external_news_post_integration.md  moderation-system.md  news-fetching-system.md  newscard-template-config.md  publish-flow-documentation.md  scaling-strategy.md  scraper_migration_guide.md  setup-guide.md  social-accounts-api.md  (+4 more)
(+289 files in other folders)
