[project]
name = "omnipush-backend"
version = "0.1.0"
description = "OmniChannel Content Orchestrator - Multi-tenant SaaS platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    "requests>=2.31.0",
    "openai>=1.3.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "facebook-sdk>=3.1.0",
    "networkx>=3.2.1",
    "plotly>=5.17.0",
    "kaleido>=0.2.1",
    "aiohttp>=3.12.15",
    "numpy>=2.3.2",
    "json-repair>=0.49.0",
    "supabase>=2.0.0",
    "postgrest>=0.12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "stripe>=7.0.0",
    "pydantic-settings>=2.0.0",
    "pillow>=10.0.0",
    "python-magic>=0.4.27",
    "celery>=5.3.0",
    "redis>=4.5.0",
    "python-csv>=0.0.13",
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
    "email-validator>=2.2.0",
    "feedparser>=6.0.11",
    "APScheduler>=3.10.4",
    "psycopg2-binary>=2.9.10",
    "boto3>=1.34.0",
    "croniter>=6.0.0",
    "google-search-results>=2.4.2",
    "serpapi>=0.1.5",
    "rich>=14.1.0",
    "debugpy>=1.8.17",
    "langdetect>=1.0.9",
    "google-genai>=1.41.0",
    "langchain-google-genai>=2.1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "api",
    "core", 
    "models",
    "services",
    "config",
    "schema",
    "static",
    "templates"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
